@@ -1,6 +1,11 @@
 # ChangeLog for net-www/adzapper
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-www/adzapper/ChangeLog,v 1.3 2003/01/08 06:36:06 jrray Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/adzapper/ChangeLog,v 1.4 2003/01/14 03:56:26 jrray Exp $
+
+*adzapper-20030111 (13 Jan 2003)
+
+  13 Jan 2003; J Robert Ray <jrray@gentoo.org> : Version bump, removing old
+  versions because they are no longer available for download.
 
   07 Jan 2003; J Robert Ray <jrray@gentoo.org> adzapper-20021128.ebuild :
   Unmasking for x86.
